renaming photos page - globally changes

--- a/profile.html
+++ b/profile.html
@@ -639,7 +639,7 @@
                                               </div>
                                             </div>
                                           </div>
-                                          <div class="_1fopc40">
+                                          <div class="become-a-host__photos-img-wrapper">
                                             <div class="_a0kct9">
                                               <h1
                                                 tabindex="-1"
@@ -905,7 +905,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                             <div class="_plk1gy">
                                               Languages I speak
                                             </div>
-                                            <div class="_1fopc40">
+                                            <div class="become-a-host__photos-img-wrapper">
                                               <div class="form__badge">
                                                 <span class="text-sm" lang="en"
                                                   >English</span
@@ -1734,7 +1734,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                         </div>
                                       </div>
                                     </div>
-                                    <div class="_1fopc40">
+                                    <div class="become-a-host__photos-img-wrapper">
                                       <div class="_a0kct9">
                                         <h1
                                           tabindex="-1"
@@ -1998,7 +1998,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                       <div class="_plk1gy">
                                         Languages I speak
                                       </div>
-                                      <div class="_1fopc40">
+                                      <div class="become-a-host__photos-img-wrapper">
                                         <div class="form__badge">
                                           <span class="text-sm" lang="en"
                                             >English</span
