--- a/reviews.html
+++ b/reviews.html
@@ -787,7 +787,7 @@
                                   </div>
                                 </section>
                               </div>
-                              <div class="_1fopc40">
+                              <div class="become-a-host__photos-img-wrapper">
                                 <fieldset class="_128xze2">
                                   <legend class="pa-0">
                                     <span class="text-highlight dir dir-ltr"
@@ -1140,7 +1140,7 @@
                                   </div>
                                 </section>
                               </div>
-                              <div class="_1fopc40">
+                              <div class="become-a-host__photos-img-wrapper">
                                 <span class="text-highlight dir dir-ltr"
                                   >What could have been better?</span
                                 >
