--- a/submission/photo.html
+++ b/submission/photo.html
@@ -1099,7 +1099,7 @@
                                         </button>
                                       </div>
                                     </div>
-                                    <div class="_1ny5tm2">
+                                    <div class="become-a-host__photos-container">
                                       <div class="account-container__menu-container">
                                         <div class="_153y5wk9">
                                           <div class="account-container-mb__header-profile-wrapper">
@@ -1107,16 +1107,16 @@
                                               role="group"
                                               aria-label="Photo 1 of 5"
                                             >
-                                              <div class="_1fopc40">
+                                              <div class="become-a-host__photos-img-wrapper">
                                                 <div
                                                   class="relative"
                                                   style="
                                                     padding-bottom: 133.33%;
                                                   "
                                                 >
-                                                  <div class="_1k2xyy0">
+                                                  <div class="become-a-host__photos-img-cotainer">
                                                     <div class="hero-banner__content-bg">
-                                                      <div class="_100wjs0">
+                                                      <div class="become-a-host__photos-img-full">
                                                         <div
                                                           class="img-middle"
                                                           role="img"
@@ -1176,12 +1176,12 @@
                                                           ></div>
                                                         </div>
                                                       </div>
-                                                      <div class="_1c1qb2i">
+                                                      <div class="become-a-host__photos-action">
                                                         <div class="flex">
-                                                          <div class="_s63vo4">
+                                                          <div class="become-a-host__photos-more">
                                                             <div>
                                                               <div
-                                                                class="_1p99teo"
+                                                                class="become-a-host__photos-more-wrapper"
                                                               >
                                                                 <button
                                                                   aria-label="Photo options"
@@ -1231,16 +1231,16 @@
                                               role="group"
                                               aria-label="Photo 2 of 5"
                                             >
-                                              <div class="_1fopc40">
+                                              <div class="become-a-host__photos-img-wrapper">
                                                 <div
                                                   class="relative"
                                                   style="
                                                     padding-bottom: 133.33%;
                                                   "
                                                 >
-                                                  <div class="_1k2xyy0">
+                                                  <div class="become-a-host__photos-img-cotainer">
                                                     <div class="hero-banner__content-bg">
-                                                      <div class="_100wjs0">
+                                                      <div class="become-a-host__photos-img-full">
                                                         <div
                                                           class="img-middle"
                                                           role="img"
@@ -1300,12 +1300,12 @@
                                                           ></div>
                                                         </div>
                                                       </div>
-                                                      <div class="_1c1qb2i">
+                                                      <div class="become-a-host__photos-action">
                                                         <div class="flex">
-                                                          <div class="_s63vo4">
+                                                          <div class="become-a-host__photos-more">
                                                             <div>
                                                               <div
-                                                                class="_1p99teo"
+                                                                class="become-a-host__photos-more-wrapper"
                                                               >
                                                                 <button
                                                                   aria-label="Photo options"
@@ -1355,16 +1355,16 @@
                                               role="group"
                                               aria-label="Photo 3 of 5"
                                             >
-                                              <div class="_1fopc40">
+                                              <div class="become-a-host__photos-img-wrapper">
                                                 <div
                                                   class="relative"
                                                   style="
                                                     padding-bottom: 133.33%;
                                                   "
                                                 >
-                                                  <div class="_1k2xyy0">
+                                                  <div class="become-a-host__photos-img-cotainer">
                                                     <div class="hero-banner__content-bg">
-                                                      <div class="_100wjs0">
+                                                      <div class="become-a-host__photos-img-full">
                                                         <div
                                                           class="img-middle"
                                                           role="img"
@@ -1424,12 +1424,12 @@
                                                           ></div>
                                                         </div>
                                                       </div>
-                                                      <div class="_1c1qb2i">
+                                                      <div class="become-a-host__photos-action">
                                                         <div class="flex">
-                                                          <div class="_s63vo4">
+                                                          <div class="become-a-host__photos-more">
                                                             <div>
                                                               <div
-                                                                class="_1p99teo"
+                                                                class="become-a-host__photos-more-wrapper"
                                                               >
                                                                 <button
                                                                   aria-label="Photo options"
@@ -1479,16 +1479,16 @@
                                               role="group"
                                               aria-label="Photo 4 of 5"
                                             >
-                                              <div class="_1fopc40">
+                                              <div class="become-a-host__photos-img-wrapper">
                                                 <div
                                                   class="relative"
                                                   style="
                                                     padding-bottom: 133.33%;
                                                   "
                                                 >
-                                                  <div class="_1k2xyy0">
+                                                  <div class="become-a-host__photos-img-cotainer">
                                                     <div class="hero-banner__content-bg">
-                                                      <div class="_100wjs0">
+                                                      <div class="become-a-host__photos-img-full">
                                                         <div
                                                           class="img-middle"
                                                           role="img"
@@ -1548,12 +1548,12 @@
                                                           ></div>
                                                         </div>
                                                       </div>
-                                                      <div class="_1c1qb2i">
+                                                      <div class="become-a-host__photos-action">
                                                         <div class="flex">
-                                                          <div class="_s63vo4">
+                                                          <div class="become-a-host__photos-more">
                                                             <div>
                                                               <div
-                                                                class="_1p99teo"
+                                                                class="become-a-host__photos-more-wrapper"
                                                               >
                                                                 <button
                                                                   aria-label="Photo options"
@@ -1603,16 +1603,16 @@
                                               role="group"
                                               aria-label="Photo 5 of 5"
                                             >
-                                              <div class="_1fopc40">
+                                              <div class="become-a-host__photos-img-wrapper">
                                                 <div
                                                   class="relative"
                                                   style="
                                                     padding-bottom: 133.33%;
                                                   "
                                                 >
-                                                  <div class="_1k2xyy0">
+                                                  <div class="become-a-host__photos-img-cotainer">
                                                     <div class="hero-banner__content-bg">
-                                                      <div class="_100wjs0">
+                                                      <div class="become-a-host__photos-img-full">
                                                         <div
                                                           class="img-middle"
                                                           role="img"
@@ -1672,12 +1672,12 @@
                                                           ></div>
                                                         </div>
                                                       </div>
-                                                      <div class="_1c1qb2i">
+                                                      <div class="become-a-host__photos-action">
                                                         <div class="flex">
-                                                          <div class="_s63vo4">
+                                                          <div class="become-a-host__photos-more">
                                                             <div>
                                                               <div
-                                                                class="_1p99teo"
+                                                                class="become-a-host__photos-more-wrapper"
                                                               >
                                                                 <button
                                                                   aria-label="Photo options"
