renaming preview page - globally changes

--- a/submission/guestReq.html
+++ b/submission/guestReq.html
@@ -1131,7 +1131,7 @@
                                     </svg>
                                   </div>
                                 </div>
-                                <div class="_dxiwe1">
+                                <div class="become-a-host__preview-loc-desc">
                                   Set age limits for guests. Minors can only
                                   attend with their legal guardian.
                                 </div>
