renaming price page - globally changes

--- a/become-a-host/legal.html
+++ b/become-a-host/legal.html
@@ -206,7 +206,7 @@
                                 aria-disabled="false"
                                 role="group"
                                 aria-labelledby="SURVEILLANCE-row-title"
-                                class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
+                                class="explore-filter-menu__list-padding become-a-host__price-discount-card dir dir-ltr"
                               >
                                 <label
                                   for="SURVEILLANCE-row-checkbox"
@@ -268,7 +268,7 @@
                                 aria-disabled="false"
                                 role="group"
                                 aria-labelledby="WEAPONS-row-title"
-                                class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
+                                class="explore-filter-menu__list-padding become-a-host__price-discount-card dir dir-ltr"
                               >
                                 <label
                                   for="WEAPONS-row-checkbox"
@@ -309,7 +309,7 @@
                                 aria-disabled="false"
                                 role="group"
                                 aria-labelledby="ANIMALS-row-title"
-                                class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
+                                class="explore-filter-menu__list-padding become-a-host__price-discount-card dir dir-ltr"
                               >
                                 <label
                                   for="ANIMALS-row-checkbox"
