--- a/become-a-host/price.html
+++ b/become-a-host/price.html
@@ -362,16 +362,16 @@
                 </div>
               </div>
               <div class="become-a-host__right-container">
-                <div class="_15lnclo5">
+                <div class="become-a-host__right-price-wrapper">
                   <div class="become-a-host__right-content">
                     <div class="become-a-host__right-content-wrap" style="transition: opacity 0.6s">
                       <div class="become-a-host__right-wrap">
                         <span style="font-size: 0"></span>
-                        <div class="_mg8q4fv" id="FMP-target">
-                          <div class="_ak1fi9o">
-                            <div class="_avf3zc">
+                        <div class="become-a-host__right-price-container" id="FMP-target">
+                          <div class="become-a-host__right-price-select">
+                            <div class="become-a-host__price-select-wrapper">
                               <button
-                                class="_qvgwrg"
+                                class="become-a-host__price-select-plus-minus"
                                 type="button"
                                 aria-label="Subtract"
                                 data-testid="undefined-decrease-button"
@@ -397,7 +397,7 @@
                                 ></span>
                               </button>
                               <div class="header__search-tabs-filter-body-guests-count">
-                                <div class="_ia55b">
+                                <div class="become-a-host__price-input-wrapper">
                                   <div class="site-content__content-menu-wrapper">
                                     <label
                                       class="input-field"
@@ -406,12 +406,12 @@
                                         >price per night</span
                                       >
                                       <div dir="ltr">
-                                        <div class="_1mmrxodj">
+                                        <div class="become-a-host__price-input-content">
                                           <input
                                             type="text"
                                             pattern="[0-9]*"
                                             placeholder="₱00"
-                                            class="_7q0o8o4"
+                                            class="become-a-host__price-input-textfield"
                                             id="undefined-input"
                                             value="₱50000"
                                             autocomplete="off"
@@ -424,7 +424,7 @@
                                 </div>
                               </div>
                               <button
-                                class="_qvgwrg"
+                                class="become-a-host__price-select-plus-minus"
                                 type="button"
                                 aria-label="Add"
                                 data-testid="undefined-increase-button"
@@ -450,11 +450,11 @@
                                 ></span>
                               </button>
                             </div>
-                            <div class="_qdum91" aria-hidden="true">
+                            <div class="become-a-host__price-select-text" aria-hidden="true">
                               per night
                             </div>
                           </div>
-                          <div class="_1r2969v6">
+                          <div class="become-a-host__right-price-alert">
                             <div class="products-container__alert-warning-date-text" id="price-error-text">
                               <span style="margin-right: 4px"
                                 ><svg
@@ -478,14 +478,14 @@
                             </div>
                           </div>
                           <div
-                            class="_16gvswn9"
+                            class="become-a-host__right-price-note"
                             style="animation-delay: 449.7412007086385ms"
                           >
                             <span aria-live="polite" aria-atomic="true"
                               >Keep in mind, places like yours usually range
                               from ₱3,391 to ₱5,652.</span
                             >
-                            <div class="_1tgve7z">
+                            <div class="become-a-host__price-note-icon">
                               <button
                                 aria-label="Help understanding suggested prices"
                                 type="button"
@@ -513,7 +513,7 @@
                             </div>
                           </div>
                           <div
-                            class="_1ke8o0l3"
+                            class="become-a-host__right-price-discount"
                             style="animation-delay: 497.9674649614837ms"
                           >
                             <div
@@ -521,7 +521,7 @@
                               aria-disabled="false"
                               role="group"
                               aria-labelledby="new-listing-promotion-row-title"
-                              class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
+                              class="explore-filter-menu__list-padding become-a-host__price-discount-card dir dir-ltr"
                             >
                               <label
                                 for="new-listing-promotion-row-checkbox"
