--- a/personal-info.html
+++ b/personal-info.html
@@ -805,7 +805,7 @@
                                               aria-disabled="false"
                                               role="group"
                                               aria-labelledby="320255193-row-title"
-                                              class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
+                                              class="explore-filter-menu__list-padding become-a-host__price-discount-card dir dir-ltr"
                                             >
                                               <div class="flex">
                                                 <div class="personal-info_list-item">
@@ -908,7 +908,7 @@
                                       aria-disabled="false"
                                       role="group"
                                       aria-labelledby="320255193-row-title"
-                                      class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
+                                      class="explore-filter-menu__list-padding become-a-host__price-discount-card dir dir-ltr"
                                     >
                                       <div class="flex">
                                         <div class="personal-info_list-item">
@@ -4165,7 +4165,7 @@
                                                   aria-disabled="false"
                                                   role="group"
                                                   aria-labelledby="320255193-row-title"
-                                                  class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
+                                                  class="explore-filter-menu__list-padding become-a-host__price-discount-card dir dir-ltr"
                                                 >
                                                   <div class="flex">
                                                     <div class="personal-info_list-item">
@@ -4269,7 +4269,7 @@
                                           aria-disabled="false"
                                           role="group"
                                           aria-labelledby="320255193-row-title"
-                                          class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
+                                          class="explore-filter-menu__list-padding become-a-host__price-discount-card dir dir-ltr"
                                         >
                                           <div class="flex">
                                             <div class="personal-info_list-item">
