--- a/submission/about.html
+++ b/submission/about.html
@@ -1130,7 +1130,7 @@
                                 aria-disabled="false"
                                 role="group"
                                 aria-labelledby="profile_photo-row-title"
-                                class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
+                                class="explore-filter-menu__list-padding become-a-host__price-discount-card dir dir-ltr"
                               >
                                 <div class="flex">
                                   <div class="tab__checkbox-mr-16">
