--- a/submission/guestReq.html
+++ b/submission/guestReq.html
@@ -1187,7 +1187,7 @@
                                         aria-disabled="false"
                                         role="group"
                                         aria-labelledby="Tag:4804-row-title"
-                                        class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
+                                        class="explore-filter-menu__list-padding become-a-host__price-discount-card dir dir-ltr"
                                       >
                                         <label
                                           for="Tag:4804-row-checkbox"
@@ -1232,7 +1232,7 @@
                                         aria-disabled="false"
                                         role="group"
                                         aria-labelledby="Tag:4802-row-title"
-                                        class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
+                                        class="explore-filter-menu__list-padding become-a-host__price-discount-card dir dir-ltr"
                                       >
                                         <label
                                           for="Tag:4802-row-checkbox"
@@ -1279,7 +1279,7 @@
                                         aria-disabled="false"
                                         role="group"
                                         aria-labelledby="Tag:4805-row-title"
-                                        class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
+                                        class="explore-filter-menu__list-padding become-a-host__price-discount-card dir dir-ltr"
                                       >
                                         <label
                                           for="Tag:4805-row-checkbox"
