--- a/submission/wwd.html
+++ b/submission/wwd.html
@@ -1291,7 +1291,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                                   <div
                                     id="info_where_are_you_broadcasting-Indoors or on my personal property"
                                     aria-disabled="false"
-                                    class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
+                                    class="explore-filter-menu__list-padding become-a-host__price-discount-card dir dir-ltr"
                                   >
                                     <label
                                       for="info_where_are_you_broadcasting-Indoors or on my personal property-row-radio-button"
@@ -1329,7 +1329,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                                   <div
                                     id="info_where_are_you_broadcasting-Outdoors and not on my personal property"
                                     aria-disabled="false"
-                                    class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
+                                    class="explore-filter-menu__list-padding become-a-host__price-discount-card dir dir-ltr"
                                   >
                                     <label
                                       for="info_where_are_you_broadcasting-Outdoors and not on my personal property-row-radio-button"
