--- a/edit/what.html
+++ b/edit/what.html
@@ -1348,7 +1348,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                             <div
                                               id="ONLINE_QUESTION-0-radio-row"
                                               aria-disabled="false"
-                                              class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
+                                              class="explore-filter-menu__list-padding become-a-host__price-discount-card dir dir-ltr"
                                             >
                                               <label
                                                 for="ONLINE_QUESTION-0-radio-row-row-radio-button"
@@ -1390,7 +1390,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                             <div
                                               id="ONLINE_QUESTION-1-radio-row"
                                               aria-disabled="false"
-                                              class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
+                                              class="explore-filter-menu__list-padding become-a-host__price-discount-card dir dir-ltr"
                                             >
                                               <label
                                                 for="ONLINE_QUESTION-1-radio-row-row-radio-button"
