--- a/wishlists.html
+++ b/wishlists.html
@@ -235,7 +235,7 @@
                                           aria-disabled="false"
                                           role="group"
                                           aria-labelledby="1148602671-row-title"
-                                          class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
+                                          class="explore-filter-menu__list-padding become-a-host__price-discount-card dir dir-ltr"
                                         >
                                           <div class="flex">
                                             <div class="tab__checkbox-mr-16">
@@ -306,7 +306,7 @@
                                           aria-disabled="false"
                                           role="group"
                                           aria-labelledby="1148604100-row-title"
-                                          class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
+                                          class="explore-filter-menu__list-padding become-a-host__price-discount-card dir dir-ltr"
                                         >
                                           <div class="flex">
                                             <div class="tab__checkbox-mr-16">
@@ -367,7 +367,7 @@
                                           aria-disabled="false"
                                           role="group"
                                           aria-labelledby="1148603879-row-title"
-                                          class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
+                                          class="explore-filter-menu__list-padding become-a-host__price-discount-card dir dir-ltr"
                                         >
                                           <div class="flex">
                                             <div class="tab__checkbox-mr-16">
@@ -430,7 +430,7 @@
                                           aria-disabled="false"
                                           role="group"
                                           aria-labelledby="1148603784-row-title"
-                                          class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
+                                          class="explore-filter-menu__list-padding become-a-host__price-discount-card dir dir-ltr"
                                         >
                                           <div class="flex">
                                             <div class="tab__checkbox-mr-16">
@@ -493,7 +493,7 @@
                                           aria-disabled="false"
                                           role="group"
                                           aria-labelledby="1148603430-row-title"
-                                          class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
+                                          class="explore-filter-menu__list-padding become-a-host__price-discount-card dir dir-ltr"
                                         >
                                           <div class="flex">
                                             <div class="tab__checkbox-mr-16">
