--- a/edit/GuestReq.html
+++ b/edit/GuestReq.html
@@ -513,7 +513,7 @@
                                             aria-disabled="false"
                                             role="group"
                                             aria-labelledby="underTwo-row-title"
-                                            class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
+                                            class="explore-filter-menu__list-padding become-a-host__price-discount-card dir dir-ltr"
                                           >
                                             <label
                                               for="underTwo-row-checkbox"
@@ -585,7 +585,7 @@
                                             aria-disabled="false"
                                             role="group"
                                             aria-labelledby="Tag:4804-row-title"
-                                            class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
+                                            class="explore-filter-menu__list-padding become-a-host__price-discount-card dir dir-ltr"
                                           >
                                             <label
                                               for="Tag:4804-row-checkbox"
@@ -632,7 +632,7 @@
                                             aria-disabled="false"
                                             role="group"
                                             aria-labelledby="Tag:4802-row-title"
-                                            class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
+                                            class="explore-filter-menu__list-padding become-a-host__price-discount-card dir dir-ltr"
                                           >
                                             <label
                                               for="Tag:4802-row-checkbox"
@@ -680,7 +680,7 @@
                                             aria-disabled="false"
                                             role="group"
                                             aria-labelledby="Tag:4805-row-title"
-                                            class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
+                                            class="explore-filter-menu__list-padding become-a-host__price-discount-card dir dir-ltr"
                                           >
                                             <label
                                               for="Tag:4805-row-checkbox"
@@ -972,7 +972,7 @@ Guests should know how to fry food and also bring boiled eggs.</textarea
                                             aria-disabled="false"
                                             role="group"
                                             aria-labelledby="requireIdVerification-row-title"
-                                            class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
+                                            class="explore-filter-menu__list-padding become-a-host__price-discount-card dir dir-ltr"
                                           >
                                             <label
                                               for="requireIdVerification-row-checkbox"
